# taxi-prediction-fullstack-Jasmin

./: README.md  pyproject.toml
models/: feature_names.joblib  label_encoders.joblib  scaler.joblib  taxi_price_model.joblib
notebooks/: 01_eda_and_cleaning.ipynb  02_ml_model_training.ipynb
src/taxipred/backend/: api.py  data_processing.py
src/taxipred/data/: taxi_for_prediction.csv  taxi_trip_pricing_cleaned.csv
src/taxipred/frontend/: app.py
src/taxipred/utils/: constants.py
